email and password form created

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="col-1">
             <h1>E-learning</h1>
-            <ul>
+            <ul >
                 <li><img src="images/logo.png">Unlimited courses and books. </li>
                 <li><img src="images/logo.png">Read anywhere and quit anytime.</li>
                 <li><img src="images/logo.png">Essential blogs.</li>
@@ -28,16 +28,26 @@
                 <span>FREE</span> ONE MONTH
             </label>
             <label for="paid">
-                                <input type="radio" name="plans" id="paid">
-                                <span>$15 <small> /month</small></span> NO LIMITS
-                                </label>
-                                <br>
-                                <p>YOUR NAME</p>
-                                <input type="text" placeholder="Enter your name" >
-                                <p>EMAIL ADDRESS</p>
-                                <input type="text" placeholder="Enter your email Id" >
-                                <button type="submit">Suscribe</button>                       
-            </form>
+                <input type="radio" name="plans" id="paid">
+                    <span>$15 <small> /month</small></span> NO LIMITS
+                </label>
+                <br>
+
+                <!-- <p>YOUR NAME</p>
+                    <input  type="text" placeholder="Enter your name" >
+                <p>EMAIL ADDRESS</p>
+                    <input  type="text" placeholder="Enter your email Id" >
+                <button type="submit">Subscribe</button>      
+                              -->
+                    <p style="font-weight: bold;font: 15px Arial, sans-serif;">Enter your Email address</p>
+                    <input style="margin-top:5px;background-color: rgb(255, 255, 255); border: 1px solid black; border-radius: 5px; color: #333; /* Dark grey */ padding: 8px "  type="text" id="fname" name="firstname" placeholder=" Enter your email..">
+                    <br>
+                    <br/>
+                    <p style="font-weight: bold;font: 15px Arial, sans-serif;">Enter your password</p>
+                    <input style="margin-top:5px;background-color: rgb(255, 255, 255); border: 1px solid black; border-radius: 5px; color: #333; /* Dark grey */ padding: 8px " type="text" id="fname" name="firstname" placeholder=" Enter your password..">
+                    
+                    <button>Subscribe</button>
+                </form>
         </div>
     </div>
   </div>  
